tests/machine/x/ocaml/group_by_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_join.ml", line 34, characters 37-47:
34 |         let cur = try List.assoc key !__groups0 with Not_found -> [] in
                                          ^^^^^^^^^^
Error: This expression has type (Obj.t * (string * Obj.t) list list) list
       but an expression was expected of type (string * 'a) list
       Type Obj.t is not compatible with type string 


Context (around line 34):
  32 |               if (o.customerId = c.id) then (
  33 |         let key = c.name in
  34 |         let cur = try List.assoc key !__groups0 with Not_found -> [] in
  35 |         __groups0 := (key, o :: cur) :: List.remove_assoc key !__groups0);
  36 |       ) customers;
